Bug 1332780 - Add telemetry to record network error while SafeBrowsing update. r=francois

MozReview-Commit-ID: 7Yqxs0XHmNP

--HG--
extra : rebase_source : 638d30a5c2f47c6075194f2459128bc980fbaff9